Final small fixes
To do: Just need to fix some small overlapping text in portfolio for
mobile

--- a/style.css
+++ b/style.css
@@ -108,7 +108,8 @@ img {
     width: auto;
     height:auto;
     float: left;
-    padding: 20px;
+    padding-bottom: 20px;
+    padding-left:20px;
 }
 
 #social {
